--- a/Dataset.ipynb
+++ b/Dataset.ipynb
@@ -15,7 +15,7 @@
     "import seaborn as sas\n",
     "import os\n",
     "from scipy.ndimage import gaussian_filter\n",
-    "import csv\n"
+    "import csv"
    ]
   },
   {
@@ -200,7 +200,15 @@
     "    \n",
     "    if position == 'Left':\n",
     "        return 2\n",
-    "            "
+    "\n",
+    "#\n",
+    "def pressure_map_normalize(pressure_map):\n",
+    "    OldRange = pressure_map.max()  \n",
+    "    NewRange = 500 \n",
+    "    for i in range(0,len(pressure_map)):\n",
+    "        pressure_map[i] = (((pressure_map[i]) * NewRange) / OldRange)\n",
+    "    \n",
+    "    return pressure_map"
    ]
   },
   {
@@ -222,6 +230,8 @@
     "        \n",
     "        pressure_map = PCA(file_name)\n",
     "        pressure_map = gaussianFilter(pressure_map)\n",
+    "        #\n",
+    "        pressure_map = pressure_map_normalize(pressure_map)\n",
     "        \n",
     "        subject = file_name[22:24]\n",
     "        if subject[1:2] == '/':\n",
@@ -264,6 +274,8 @@
     "        pressure_map = padding(pressure_map)\n",
     "        pressure_map = gaussianFilter(pressure_map)\n",
     "        pressure_map = pressure_map.reshape((2048, ))\n",
+    "        #\n",
+    "        pressure_map = pressure_map_normalize(pressure_map)\n",
     "        \n",
     "        subject = file_name[23:24]\n",
     "        \n",
@@ -355,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
