--- a/Dataset.ipynb
+++ b/Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,9 +180,10 @@
     "        return 2\n",
     "\n",
     "def rescale(pressure_map, max_value, min_value):\n",
-    "\n",
+    "    \n",
+    "    maximum = pressure_map.max()\n",
     "    minimum = pressure_map.min()  \n",
-    "    OldRange = pressure_map.max() - pressure_map.min()  \n",
+    "    OldRange = maximum - minimum\n",
     "    NewRange = max_value - min_value\n",
     "\n",
     "    for i in range(0,len(pressure_map)):\n",
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -219,6 +220,7 @@
     "            #pressure_map = gaussianFilter(pressure_map)\n",
     "            pressure_map = rescale(pressure_map, 500, 0)\n",
     "            pressure_map = pressure_map.reshape((2048, ))\n",
+    "            #pressure_map = pressure_map/1000\n",
     "        \n",
     "            subject = file_name[22:24]\n",
     "            if subject[1:2] == '/':\n",
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,9 +262,10 @@
     "        \n",
     "        pressure_map = flip(pressure_map, exp)\n",
     "        pressure_map = padding(pressure_map)\n",
-    "        pressure_map = gaussianFilter(pressure_map)\n",
+    "        #pressure_map = gaussianFilter(pressure_map)\n",
     "        pressure_map = pressure_map.reshape((2048, ))\n",
     "        pressure_map = rescale(pressure_map, 500, 0)\n",
+    "        #pressure_map = pressure_map/500\n",
     "\n",
     "        subject = file_name[23:25]\n",
     "        if subject[1:2] == '/':\n",
@@ -271,14 +274,14 @@
     "        file = clean_string(file_name, exp)\n",
     "        position = trueLabel(file, exp)\n",
     "        position = label_position(position)\n",
-    "        \n",
+    "                \n",
     "        data = Dataset(pressure_map, int(subject)-1, int(position))\n",
     "        dataset2.append(data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
