--- a/Dataset_2.ipynb
+++ b/Dataset_2.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "    CY =  np.diag(np.round(np.real(w),2))\n",
     "\n",
-    "    P = v[:,0:1]\n",
+    "    P = v[:,0:5]\n",
     "    P = abs(P)\n",
     "\n",
     "    array_final = P.T.dot(array)\n",
@@ -235,7 +235,7 @@
     "        y_pos = kmeans.cluster_centers_[1][1]\n",
     "\n",
     "    \n",
-    "    return x_pos, y_pos,\n"
+    "    return x_pos, y_pos, mean_cluster\n"
    ]
   },
   {
@@ -269,7 +269,7 @@
     "            section2 = pressure_map[14:37]\n",
     "            section3 = pressure_map[37:]\n",
     "            pos_h_x, pos_h_y, mean_h = kMeans(section1)\n",
-    "            pos_c_x, pos_c_y, mean_c= kMeans(section2)\n",
+    "            pos_c_x, pos_c_y, mean_c = kMeans(section2)\n",
     "            pos_l_x, pos_l_y, mean_l = kMeans(section3)\n",
     "        \n",
     "            subject = file_name[22:24]\n",
@@ -373,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
